--- a/totalhr.web/Views/Home/Index.cshtml
+++ b/totalhr.web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 Welcome to TotalHR!
                 The HR System that provides you with full control of your human resource.
                 Now all your HR functions combined into one system.<br/><br/>
-                <span class="btn-orange-small">Try it Free Now</span>
+                <span class="btn orangeb">Try it Free Now</span>
             </p>
             <div class="imagecarousel">
 		
