--- a/totalhr.web/areas/Admin/Views/Home/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/Home/Index.cshtml
@@ -31,6 +31,31 @@
 
                 </div>
             </div>
+            <div class="option" onclick="document.location.href='/Admin/Company/Department/'">
+                <h4>@AdminGeneric.V_Department_Management</h4>
+                <div class="cont">
+
+                </div>
+            </div>
+             <div class="option" onclick="document.location.href='/Admin/Company/Document/'">
+                <h4>@AdminGeneric.V_Document_Folder_Managment</h4>
+                <div class="cont">
+
+                </div>
+            </div>
+             <div class="option" onclick="document.location.href='/Admin/Contract/'">
+                <h4>@AdminGeneric.V_Contract_Management</h4>
+                <div class="cont">
+
+                </div>
+            </div>
+
+            <div class="option" onclick="document.location.href='/Admin/Absences/'">
+                <h4>@AdminGeneric.V_Absences_Management</h4>
+                <div class="cont">
+
+                </div>
+            </div>
 
         </div>
     </div>
