--- a/totalhr.web/areas/Admin/Views/User/UserCreated.cshtml
+++ b/totalhr.web/areas/Admin/Views/User/UserCreated.cshtml
@@ -11,7 +11,7 @@
     <h1>@Account.V_User_Created</h1>
     
     <div class="wide">
-        @Account.MSG_User_Created
+        @Html.Raw(string.Format(Account.MSG_User_Created, Model.FirstName + " " + Model.Surname))
     </div>
     <div class="wide">
         <input type="button" class="btn blueb" value="@AdminGeneric.V_Manage_Profiles" onclick="OpenPopup('/Admin/Profile/ManageUserProfiles/@Model.UserId', 600, 500)" />
