Task Scheduler Add

--- a/totalhr.web/Views/TimeRecording/RecordTime.cshtml
+++ b/totalhr.web/Views/TimeRecording/RecordTime.cshtml
@@ -6,8 +6,8 @@
 
 <h2>RecordTime</h2>
 @{
-    var culture = System.Globalization.CultureInfo.CurrentUICulture;
-    var defaultStartDate = (Model.StartTime > DateTime.MinValue) ? Model.StartTime.ToString(culture) : DateTime.Now.ToString(culture);
+  //  var culture = System.Globalization.CultureInfo.CurrentUICulture;
+//var defaultStartDate = (Model.StartTime > DateTime.MinValue) ? Model.StartTime.ToString(culture) : DateTime.Now.ToString(culture);
 }
 @using (Html.BeginForm())
 {
