--- a/totalhr.web/areas/Admin/Views/Contract/CreateTemplate.cshtml
+++ b/totalhr.web/areas/Admin/Views/Contract/CreateTemplate.cshtml
@@ -20,6 +20,55 @@
     <h1>@Contract.V_Template_Create</h1>
 
     <div class="wide">
+        <p>
+            A contract template is a form that needs to be filled by an admin user. The employee can only see a completed form as his/her contract
+            once the template has been attached to the contract.
+            <br />
+            If you want to attach an existing form to your contract as template, please go back to the contract and select an existing form
+            template then attach it accordingly.
+            <br />
+            Click on the button below to open the form editor and create your form. This will launch a popup window.
+        </p>
 
+        @using (Html.BeginForm("CreateTemplate", "Contract", FormMethod.Post))
+        {
+            
+             @Html.ValidationSummary()
+
+            <div class="formdiv midform">
+                <div class="wrapper">
+
+                  <fieldset>
+                   <legend>Template Details</legend>
+                
+                    <div class="line">
+                        <label>Name</label>
+                         <span>@Html.TextBoxFor(x => x.Name)</span>
+                        <span class="req">*</span>
+                    </div>
+
+                    <div class="line">
+                        <label>Description</label>
+                         <span>@Html.TextAreaFor(x => x.Description)</span>                        
+                    </div>
+
+                    <div class="line">
+                        <label>Form</label>
+                         <span>@Html.DropDownListFor(x => x.FormId, 
+                            new List<SelectListItem>{new SelectListItem{ Value = "", Text = "Select"}})</span>    
+                        <span><input type="button" value="New Form" onclick="OpenPopup('/Admin/FormEditor/CreateForm/1', 900, 600)" /></span>                    
+                    </div>
+
+                    <div class="line">
+                        <label>&nbsp;</label>
+                         <span><input type="submit" value="Save Template" onclick="return false;" /></span>
+                    </div>
+                  </fieldset>
+
+                </div>
+            </div>
+        }
+
+       
     </div>
 </div>
