--- a/totalhr.web/areas/Admin/Views/Contract/CreateTemplate.cshtml
+++ b/totalhr.web/areas/Admin/Views/Contract/CreateTemplate.cshtml
@@ -70,7 +70,7 @@
 
                     <div class="line">
                         <label>&nbsp;</label>
-                         <span><input type="submit" value="Save Template" onclick="return false;" /></span>
+                         <span><input type="submit" value="Save Template" /></span>
                     </div>
                   </fieldset>
 
