more work on templates

--- a/totalhr.web/areas/Admin/Views/Contract/Manage.cshtml
+++ b/totalhr.web/areas/Admin/Views/Contract/Manage.cshtml
@@ -1,5 +1,34 @@
-﻿@{
-    ViewBag.Title = "Manage";
+﻿@using totalhr.Resources;
+
+@model totalhr.web.Areas.Admin.Models.UserSearchResult
+
+@{
+    ViewBag.Title = Contract.V_Contract_Management;
 }
 
-<h2>Manage</h2>
+<div class="container">
+      @section breadcrumb{
+            <a href="/Admin/" title="@AdminGeneric.V_Home">@AdminGeneric.V_Home</a> &gt;
+            <span class="last">@AdminGeneric.V_Contract_Management</span>
+        }
+
+    <h1>@Contract.V_Contract_Management</h1>
+
+    <div class="wide">
+
+        <p>
+            In order to create a contract for a user, you need to select a user from the list below or search for a user.<br />
+            Once a user is found, you can edit or create a contract for this user.
+        </p>
+
+        <div class="wide">
+            @Html.Partial("_UserSearch", Model.SearchInfo)
+        </div>
+        <div class="wide">
+
+            @Html.Partial("_UserList", Model)
+
+        </div>
+        
+    </div>
+</div>
