--- a/totalhr.web/areas/Admin/Views/Home/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/Home/Index.cshtml
@@ -57,6 +57,13 @@
                 </div>
             </div>
 
+             <div class="option" onclick="document.location.href='/Admin/FormEditor/'">
+                <h4>@AdminGeneric.V_Manage_Forms</h4>
+                <div class="cont">
+
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
