more work on user contract

--- a/totalhr.web/areas/Admin/Views/Contract/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/Contract/Index.cshtml
@@ -17,8 +17,8 @@
         @AdminGeneric.V_Choose_Option
     </p>
     <p>
-        <a href="/Admin/Contract/Manage/" title="@AdminGeneric.V_Manage_Contracts">
-            @AdminGeneric.V_Manage_Contracts
+        <a href="/Admin/Contract/Manage/" title="@Contract.V_Contract_Management_SelUser">
+            @Contract.V_Contract_Management_SelUser
         </a>
     </p>
     <p>
