--- a/totalhr.web/areas/Admin/Views/Contract/Manage.cshtml
+++ b/totalhr.web/areas/Admin/Views/Contract/Manage.cshtml
@@ -1,6 +1,6 @@
 ﻿@using totalhr.Resources;
 
-@model totalhr.web.Areas.Admin.Models.UserSearchResult
+@model List<totalhr.data.EF.User>
 
 @{
     ViewBag.Title = Contract.V_Contract_Management;
@@ -9,7 +9,8 @@
 <div class="container">
       @section breadcrumb{
             <a href="/Admin/" title="@AdminGeneric.V_Home">@AdminGeneric.V_Home</a> &gt;
-            <span class="last">@AdminGeneric.V_Contract_Management</span>
+            <a href="/Admin/Contract/" title="@AdminGeneric.V_Contract_Management">@AdminGeneric.V_Contract_Management</a> &gt;
+            <span class="last">@Contract.V_Contract_Management_SelUser</span>
         }
 
     <h1>@Contract.V_Contract_Management</h1>
@@ -22,13 +23,40 @@
         </p>
 
         <div class="wide">
-            @Html.Partial("_UserSearch", Model.SearchInfo)
+
+          <form name="frmUser" id="frmUser" action="/Admin/Contract/ManageUserContract">
+              <b>@AdminGeneric.V_Select_User</b> &nbsp;
+              <select name="slUserList" id="slUserList" onchange="SubmitForm()">
+                  <option>@AdminGeneric.V_Select</option>
+                  @foreach (var user in Model)
+                  {
+                      <option value="@user.id">@(user.firstname + " " + user.surname)</option>
+                  }
+              </select>
+
+          </form>
         </div>
         <div class="wide">
 
-            @Html.Partial("_UserList", Model)
+           @* @Html.Partial("_UserList", Model)*@
 
         </div>
         
     </div>
 </div>
+
+<input type="hidden" id="hdnErrorUserNotSelected" value="@Contract.Error_Select_User" />
+
+@section scripts{
+    <script type="text/javascript">
+        function SubmitForm() {
+            var val = $("#slUserList option:selected").val();
+            if (val > 0) {
+                $('#frmUser').submit();
+            } else {
+                alert($('#hdnErrorUserNotSelected').val());
+            }
+        }
+
+    </script>
+}
