changes for template edit

--- a/totalhr.web/areas/Admin/Views/Contract/FillContract.cshtml
+++ b/totalhr.web/areas/Admin/Views/Contract/FillContract.cshtml
@@ -115,7 +115,7 @@
 
                 </fieldset>
 
-               @* <div class="form-group">
+                <div class="form-group">
                     <label class="control-label col-sm-3">@FormGenerator.V_Form_Status</label>
 
                     <div class="col-sm-9">
@@ -124,7 +124,7 @@
                             <span ng-if="previewForm.$valid" class="text-success">@FormGenerator.V_Valid <span class="glyphicon glyphicon-thumbs-up"></span></span>
                         </div>
                     </div>
-                </div>*@
+                </div>
 
              @*   <div class="form-group">
                     <label class="control-label col-sm-3">@FormGenerator.V_Form_Data</label>
@@ -134,13 +134,13 @@
                     </div>
                 </div>*@
                 
-              @*  <div class="form-group">
+                <div class="form-group">
                     <label class="control-label col-sm-3">&nbsp;</label>
 
                     <div class="col-sm-9">
                         <input type="button" value="Submit" ng-click="SubmitFormInput()"/>
                     </div>
-                </div>*@
+                </div>
 
             </form>
             
